# trading-system

./: .gitattributes  .gitignore  CHANGELOG.md  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt
.github/actions/setup-python/: action.yml
.github/workflows/: ci.yml  run_scan_classical_strategy.yml  run_scan_classical_strategy_crypto.yml  validation_classical_strategies.yml
config/: Euronext.csv  Euronext_cat_A-B-C.csv  Euronext_growth_access.csv  ticker_renamed.xlsx  trading.db  trading_dev.db  validation_classical_strategy.json  validation_classical_strategy_crypto.json  validator.db  wikidata_yahoo_mapping.csv  yahoo_suffix.csv
config/classical_strategy/: metadata_opt_ACA.PA.json  metadata_opt_AIR.PA.json  metadata_opt_BN.PA.json  metadata_opt_BNP.PA.json  metadata_opt_CA.PA.json  metadata_opt_CAP.PA.json  metadata_opt_CS.PA.json  metadata_opt_DG.PA.json  metadata_opt_DSY.PA.json  metadata_opt_EL.PA.json  metadata_opt_EN.PA.json  metadata_opt_ENGI.PA.json  metadata_opt_ERF.PA.json  metadata_opt_GLE.PA.json  metadata_opt_HO.PA.json  metadata_opt_KER.PA.json  metadata_opt_LR.PA.json  metadata_opt_MC.PA.json  metadata_opt_ML.PA.json  metadata_opt_MT.AS.json  metadata_opt_OR.PA.json  metadata_opt_ORA.PA.json  metadata_opt_RI.PA.json  metadata_opt_RMS.PA.json  metadata_opt_RNO.PA.json  metadata_opt_SAF.PA.json  metadata_opt_SAN.PA.json  metadata_opt_SGO.PA.json  metadata_opt_STMPA.PA.json  metadata_opt_SU.PA.json  metadata_opt_TEP.PA.json  metadata_opt_TTE.PA.json  metadata_opt_VIE.PA.json  metadata_opt_VIV.PA.json  metadata_opt_WLN.PA.json
config/classical_strategy_crypto/: metadata_opt_ADA_EUR.json  metadata_opt_ADA_USDT.json  metadata_opt_ATOM_EUR.json  metadata_opt_ATOM_USDT.json  metadata_opt_BTC_EUR.json  metadata_opt_BTC_USDT.json  metadata_opt_ETC_USDT.json  metadata_opt_ETH_EUR.json  metadata_opt_ETH_USDT.json  metadata_opt_XLM_EUR.json  metadata_opt_XLM_USDT.json  metadata_opt_XRP_EUR.json  metadata_opt_XRP_USDT.json
scripts/: analyse_params.py  get_all_crypto_pair.py  optimize_classical_parameters.py  optimize_classical_parameters_crypto.py  profile_optimisation.py  reporting_time_consumption.py  run_backtest_validator.py  run_backtest_validator_crypto.py  run_classical_scan.py  run_classical_scan_crypto.py  train_model.py  update_prod_db.py  validate_tickers_dev_db.py  validate_tickers_prod_db.py
src/backtesting/: engine.py
src/data/: processor.py
src/features/: technical.py
src/ml/: model.py  trainer.py
src/strategies/: classical.py  hybrid.py
src/trading_system/: __init__.py  _version.py
src/trading_system/backtesting/: __init__.py  engine.py
src/trading_system/data/: __init__.py  loader.py  processor.py
src/trading_system/database/: __init__.py  tickers.py  trading_params.py  utils.py  validators.py
tests/: conftest.py
tests/integration/: test_backtest.py  test_data_modules.py  test_database.py  test_email_sender_integration.py  test_full_flow.py  test_loader.py  test_loader_yfinance.py  test_notifications_integration.py  test_technical_integration.py
tests/unit/: test_best_strategy_repository.py  test_data_loader.py  test_email_sender.py  test_engine.py  test_nottifications.py  test_strategies.py  test_strategy_validation_repository.py  test_technical.py  test_tickers_repository.py  test_trainer.py
(+10 files in other folders)
