# pyproject.toml
[build-system]
requires = ["setuptools>=61.0", "wheel", "setuptools-scm>=6.4.0"]
build-backend = "setuptools.build_meta"

[project]
name = "trading-system"
dynamic = ["version"]
description = "Système de trading algorithmique hybride pour la Bourse de Paris"
readme = "README.md"
authors = [
    { name = "Erwan CHESNEAU", email = "erwanchesneau@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.9"
dependencies = [
    "pandas>=1.3.0",
    "numpy>=1.21.0",
    "scikit-learn>=1.0.0",
    "xgboost>=1.5.0",
    "yfinance>=0.2.0",
    "ta>=0.10.0",
    "cachetools>=5.0.0",
    "setuptools-scm>=6.4.0"
]

[tool.setuptools_scm]
write_to = "src/trading_system/_version.py"
write_to_template = "__version__ = \"{version}\"\n"
version_scheme = "release-branch-semver"
local_scheme = "no-local-version"

[project.optional-dependencies]
dev = [
    "black>=23.0.0",
    "isort>=5.12.0",
    "flake8>=6.0.0",
    "mypy>=1.0.0",
    "safety>=2.0.0",
    "bandit>=1.7.0"
]
test = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
]

[tool.setuptools]
packages = { find = { where = ["src"] } }

[tool.setuptools.package-dir]
trading_system = "src/trading_system"

[tool.black]
line-length = 88
target-version = ['py38']

[tool.flake8]
max-line-length = 88
extend-ignore = ["E203", "E501", "W503"]
exclude = ".git,__pycache__,build,dist,.venv,venv"

[tool.isort]
profile = "black"
line_length = 88
known_first_party = ["trading_system"]

[tool.mypy]
python_version = "3.10"
ignore_missing_imports = true
disallow_untyped_defs = true

[tool.coverage.run]
source = ["trading_system"]
omit = ["*/__init__.py", "*/_version.py"]


[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"